# MatchSystem

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
CameraCalibration/: CMakeLists.txt
CameraCalibration/src/: main.cpp
etc/: KabirousSystem.yaml
src/: CMakeLists.txt  main.cpp
src/configuration/: CMakeLists.txt
src/configuration/src/: configuration.cpp  configuration.h
src/configuration/test/: CMakeLists.txt  parser.cc
src/interface/: CMakeLists.txt
src/interface/src/: KaribousApp.ui  interface.cpp  interface.h
src/karibous_system/: CMakeLists.txt
src/karibous_system/src/: KSystem.cpp  KSystem.h
src/lidar/: CMakeLists.txt  lidar.cpp  lidar.h
src/logger/: CMakeLists.txt
src/logger/src/: Logger.cpp  Logger.h
src/sensors/: CMakeLists.txt
src/sensors/camera/: CMakeLists.txt  main.cpp
src/sensors/camera/src/: camera.cpp  camera.h  camera_calib.cpp  camera_calib.h
src/sensors/lidar/: CMakeLists.txt  readme.md
src/sensors/lidar/src/: lidar.cpp  lidar.h
src/sensors/lidar/test/: test_lidar.cpp
src/sensors/sensor/: CMakeLists.txt
src/sensors/sensor/src/: sensor.cpp  sensor.h  sensorCapture.cpp  sensorCapture.h
